--- a/DolphinPortal.vbproj
+++ b/DolphinPortal.vbproj
@@ -404,6 +404,7 @@
     <Content Include="public\sass\atlantis\_typography.scss" />
     <Content Include="public\sass\atlantis\_variables.scss" />
     <Content Include="README.md" />
+    <Content Include="vercel.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
